--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "homepage": "http://rackt.github.io/redux",
   "dependencies": {
+    "firebase": "^2.3.1",
     "react": "^0.13.3",
     "react-redux": "^2.1.2",
+    "reactfire": "^0.5.1",
     "redux": "^3.0.0",
     "redux-thunk": "^0.1.0",
     "redux-undo": "^0.5.0"
